@@ -2848,3 +2848,6 @@ snapshot.c: use the fully encapsulated libspectrum_snap
 20080810 ui/win32/{win32ui.c,debugger.c,win32internals.h}: Win32: fixed the
 	 pause/unpause routines by introducing win32ui_process_messages - an
 	 equivalent of gtk's gtk_main (Marek).
+20080810 ui/win32/{options,options-resource,options-header}.pl: Win32: renamed
+	 options dialogs from IDG_* to IDD_* to follow the naming convention
+	 (Marek).
